# difflog

./: .gitignore  README.md  pyproject.toml
difflog/: __init__.py  classifier.py  cli.py  git_interface.py  llm_summarizer.py  renderer.py  semantic_parser.py
difflog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_classifier.py  test_git_interface.py  test_semantic_parser.py
